...

  // -----------------------------
  // 🔥 TOP ITEMS Dummy (tetap sama)
  // -----------------------------
  final List<Map<String, String>> _topItems = [
    {
      "name": "Proyektor Epson",
      "code": "Alt001",
      "image":
          "https://tse3.mm.bing.net/th/id/OIP.OeOqeXR8-0NM-913ZQOQuQHaEJ?pid=Api"
    },
    {
      "name": "Laptop Lenovo",
...
              padding: const EdgeInsets.symmetric(horizontal: 24.0),
              child: Column(
                children: [
                  _buildProfileMenuItem(icon: Icons.edit, text: "Ubah Profil", onTap: () => Navigator.push(context, MaterialPageRoute(builder: (context) => const EditProfileScreen()))),
                  _buildProfileMenuItem(
  icon: Icons.history, 
  text: "Riwayat Transaksi", 
  onTap: () {
     Navigator.push(context, MaterialPageRoute(builder: (context) => const HistoryScreen()));
  }
),
                  _buildProfileMenuItem(
  icon: Icons.help_outline, 
...
                        backgroundColor: Colors.red[50],
                        foregroundColor: Colors.red,
                        elevation: 0,
                        padding: const EdgeInsets.symmetric(vertical: 15),
                        shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(12))
                      ),
                      child: const Text("Keluar Aplikasi", style: TextStyle(fontWeight: FontWeight.bold)),
                    ),
                  ),
                  const SizedBox(height: 30),
                ],
              ),
            ),
...
                          },
                          style: ElevatedButton.styleFrom(
                            backgroundColor: const Color(0xFF8E78FF), // Warna Ungu Tema
                            shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(25)),
                            elevation: 0,
                          ),
                          child: const Text("Ya", style: TextStyle(color: Colors.white, fontWeight: FontWeight.bold, fontSize: 16)),
                        ),
                      ),
                    ),
                    
                    const SizedBox(width: 15),

...
