...
                              authProvider.isLogin 
                                ? "Belum punya akun? " 
                                : "Sudah punya akun? ",
                              style: const TextStyle(color: Colors.white70, fontSize: 15),
                            ),
                            GestureDetector(
                              key: const Key('tombol_pindah_register'),
                              onTap: () => authProvider.toggleLogin(),
                              child: Text(
                                authProvider.isLogin ? "Daftar Sekarang" : "Login Disini",
                                style: const TextStyle(
                                  color: Colors.white,
                                  fontWeight: FontWeight.bold,
                                  fontSize: 15,
                                  decoration: TextDecoration.underline,
                                  decorationColor: Colors.white,
...
