...
                            },
                      style: ElevatedButton.styleFrom(
                        backgroundColor: const Color(0xff4CAF50), // Hijau
                        padding: const EdgeInsets.symmetric(vertical: 12),
                      ),
                      child: Text(
                        stokVirtual <= 0 ? "Full Booked" : "Sewa",
                        style: const TextStyle(
                          color: Colors.white, 
                          fontWeight: FontWeight.bold
                        ),
                      ),
                    ),
...
